[package]
name = "smart-locker"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"       # Chiffrement AES-GCM
rand = "0.9"           # Génération de nombres aléatoires
clap = { version = "4.0", features = ["derive"] } # Gestion des arguments CLI
serde = { version = "1.0", features = ["derive"] } # Sérialisation/Désérialisation
directories = "6.0"    # Gestion des chemins spécifiques à l'utilisateur
ring = "0.17.14"
copypasta = "0.10.1"
colored = "3.0"
flate2 = "1.0"

[[test]]
name = "test"
path = "src/tests/test.rs"