[package]
name = "smart-locker"
version = "0.1.1-rc.2"
authors = ["William"]
edition = "2021"
license = "MIT"
description = "A smart locker CLI tool"
repository = "https://github.com/WillIsback/smart-locker"
homepage = "https://github.com/WillIsback/smart-locker"
documentation = "https://docs.rs/smart-locker"
keywords = ["locker", "cli", "rust"]
categories = ["command-line-utilities"]

[dependencies]
aes-gcm = "0.10"       # Chiffrement AES-GCM
rand = "0.9"           # Génération de nombres aléatoires
clap = { version = "4.0", features = ["derive"] } # Gestion des arguments CLI
serde = { version = "1.0", features = ["derive"] } # Sérialisation/Désérialisation
directories = "6.0"    # Gestion des chemins spécifiques à l'utilisateur
ring = "0.17.14"
copypasta = "0.10.1"
colored = "3.0"
flate2 = "1.0"

[features]
default = []
disable_clipboard_tests = []

[lib]
name = "smart_locker"
path = "src/lib.rs"

[[bin]]
name = "smart-locker"
path = "src/main.rs"

[[test]]
name = "test"
path = "src/tests/unittest.rs"

