[package]
name = "smart-locker"
version = "0.2.2"
authors = ["William"]
edition = "2021"
license = "MIT"
description = "A smart locker CLI tool"
repository = "https://github.com/WillIsback/smart-locker"
homepage = "https://github.com/WillIsback/smart-locker"
documentation = "https://docs.rs/smart-locker"
keywords = ["locker", "cli", "rust"]
categories = ["command-line-utilities"]

[package.metadata.deb]
maintainer = "William <william.derue@gmail.com>"
copyright = "2025, William <william.derue@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
Smart Locker is a command-line tool written in Rust for managing \
secure lockers. It provides encryption, secure storage, and \
easy-to-use CLI commands."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/smart-locker", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/smart-locker/README", "644"],
    ["LICENSE", "usr/share/doc/smart-locker/LICENSE", "644"],
]

[package.metadata.generate-rpm]
maintainer = "William <william.derue@gmail.com>"
copyright = "2025, William <william.derue@gmail.com>"
license-file = ["LICENSE", "4"]
description = """\
Smart Locker is a command-line tool written in Rust for managing \
secure lockers. It provides encryption, secure storage, and \
easy-to-use CLI commands."""
assets = [
    { source = "target/release/smart-locker", dest = "/usr/bin/smart-locker", mode = "755"},
    { source = "README.md", dest = "/usr/share/doc/smart-locker/README", mode = "644"},
    { source = "LICENSE", dest = "/usr/share/doc/smart-locker/LICENSE", mode = "644"},
]

[dependencies]
aes-gcm = "0.10"       # Chiffrement AES-GCM
rand = "0.9"           # Génération de nombres aléatoires
clap = { version = "4.0", features = ["derive"] } # Gestion des arguments CLI
serde = { version = "1.0", features = ["derive"] } # Sérialisation/Désérialisation
directories = "6.0"    # Gestion des chemins spécifiques à l'utilisateur
ring = "0.17.14"
copypasta = "0.10.1"
colored = "3.0"
flate2 = "1.0"
thiserror = "1.0"

[features]
default = []
disable_clipboard_tests = []

[lib]
name = "smart_locker"
path = "src/lib.rs"

[[bin]]
name = "smart-locker"
path = "src/main.rs"

[[test]]
name = "test"
path = "src/tests/unittest.rs"

